fix z-index on Chat and ScrollBar

--- a/project-saints/saints-project/src/assets/chat.css
+++ b/project-saints/saints-project/src/assets/chat.css
@@ -24,7 +24,7 @@
   display: none;
   flex-direction: column;
   overflow: hidden;
-  z-index: 1000;
+  z-index: 30;
   font-family: var(--font-primary);
 }
 
