--- a/project-saints/saints-project/src/index.css
+++ b/project-saints/saints-project/src/index.css
@@ -8,7 +8,7 @@
   height: 100px;
   width: 3px;
   background: rgba(116, 116, 116, 0.533);
-  z-index: 1000;
+  z-index: 20;
   border-radius: 50px;
 }
 
@@ -18,7 +18,7 @@
   background: rgb(238, 238, 238);
   opacity: 0.6;
   transform-origin: top;
-  z-index: 1000;
+  z-index: 20;
 
 }
 
